; ModuleID = '/home/carl/AnghaBench/linux/sound/firewire/extr_isight.c_isight_close.c'
source_filename = "/home/carl/AnghaBench/linux/sound/firewire/extr_isight.c_isight_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_pcm_substream = type { %struct.isight* }
%struct.isight = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_pcm_substream*)* @isight_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @isight_close(%struct.snd_pcm_substream* %0) #0 {
  %2 = alloca %struct.snd_pcm_substream*, align 8
  %3 = alloca %struct.isight*, align 8
  store %struct.snd_pcm_substream* %0, %struct.snd_pcm_substream** %2, align 8
  %4 = load %struct.snd_pcm_substream*, %struct.snd_pcm_substream** %2, align 8
  %5 = getelementptr inbounds %struct.snd_pcm_substream, %struct.snd_pcm_substream* %4, i32 0, i32 0
  %6 = load %struct.isight*, %struct.isight** %5, align 8
  store %struct.isight* %6, %struct.isight** %3, align 8
  %7 = load %struct.isight*, %struct.isight** %3, align 8
  %8 = getelementptr inbounds %struct.isight, %struct.isight* %7, i32 0, i32 1
  %9 = load %struct.isight*, %struct.isight** %3, align 8
  %10 = getelementptr inbounds %struct.isight, %struct.isight* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @iso_packets_buffer_destroy(i32* %8, i32 %11)
  ret i32 0
}

declare dso_local i32 @iso_packets_buffer_destroy(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
